Fix width of page to increase readability

--- a/source/assets/stylesheets/_config.scss
+++ b/source/assets/stylesheets/_config.scss
@@ -23,7 +23,7 @@ $fonts: (
 $susy: (
   columns: 12,
   gutters: 1,
-  container: 800px,
+  container: 920px,
   gutter-position: inside
 );
 
